# workbook_with_terraform

./: .gitignore  LICENSE  README.md  ignore_terraform_dir.sh
0_create_iam_policy/: main.tf  output.tf  provider.tf  terraform.tfstate
1_deploy_ec2/: main.tf  output.tf  provider.tf  run_script.sh  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  vars.tf
2_deploy_lambda/: delete_terraform.sh  main.tf  terraform.tfstate  terraform.tfstate.backup
3_deploy_lambda_add_trigger/: main.tf  run.sh  terraform.tfstate  terraform.tfstate.backup
4_deploy_lambda_SNS/: main.tf  run.sh  terraform.tfstate  var.tf  (+1 more)
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/: .gitignore  README.md  application.py  pyproject.toml  requirements.txt
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/static/css/: style.css
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/static/data/: ne_110m_ocean.geojson  preprocess_data.ipynb
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/static/data/climate/: city_weather_2020.csv  city_weather_halve_2020.csv
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/static/src/: extra_functions_tests.js  map.js  scatter_plot.js
5_aws_beanstalker_deploy_app/terraform_climate_web_update_button_v1/application/climate_web_update_button/templates/: base.html  map.html
(+10 files in other folders)
