[tool.poetry]
name = "single-map"
version = "0.1.0"
description = ""
authors = ["sagarlimbu0 <sagarlimbu027@gmail.com>"]
readme = "README.md"
packages = [{include = "single_map"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
leaflet = "^0.0.3"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
